objects/NDR_Region_Sales_and_Cust_Region_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom setting contain mapping of Region sales field(Opportunity) with Customer Region field(Account). Used in Class Route_NDR_Opportunity</description>
    <fields>
        <fullName>Customer_Region__c</fullName>
        <label>Customer Region</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDR_END_Customer_Country__c</fullName>
        <label>NDR END Customer Country</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDR_SAP_Region_c__c</fullName>
        <label>NDR_SAP_Region__c</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Sales__c</fullName>
        <label>Region Sales</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>NDR Region Sales and Cust Region Mapping</label>
</CustomObject>